changed \myTOCCaption to \myBibCaption

--- a/sample/main.tex
+++ b/sample/main.tex
@@ -24,7 +24,7 @@
 \newcommand*{\myExamDate}{30.02.2021}
 \newcommand*{\myFootText}{Dissertation \myAuthor}
 \newcommand*{\myAcronymListCaption}{Abkürzungsverzeichnis}
-\newcommand*{\myTOCCaption}{Literaturverzeichnis}
+\newcommand*{\myBibCaption}{Literaturverzeichnis}
 
 \graphicspath{{figures/}}  % define graphics standard path
 
