--- a/sample/minimal/content.tex
+++ b/sample/minimal/content.tex
@@ -1,2 +1,5 @@
-\input{chapter/der_kleine_kapiteltest}
-\input{chapter/blindtext_kapitel}
+\chapter{First Chapter}
+The first chapter of my thesis.
+
+\section{First Section in First Chapter}
+This is what a cite looks like: \cite{malinowski_using_nodate}
