--- a/sample/minimal/main.tex
+++ b/sample/minimal/main.tex
@@ -5,11 +5,11 @@
 % like title and author
 % ########################
 
-\newcommand*{\myTitle}{Mein extravaganter Dissertationstitel}
-\newcommand*{\mySubtitle}{Weitere Erklärungen zum Titel}
+\newcommand*{\myTitle}{My extravagant dissertation title}
+\newcommand*{\mySubtitle}{Further explanations to the title}
 \newcommand*{\myAuthor}{Jane Doe}
-\newcommand*{\myFirstReviewer}{Universitätsprofessor Dr.-Ing. Martin Ziegler}
-\newcommand*{\mySecondReviewer}{Universitätsprofessor Raul Fuentes}
+\newcommand*{\myFirstReviewer}{Professor Dr.-Ing. Martin Ziegler}
+\newcommand*{\mySecondReviewer}{Professor Raul Fuentes}
 \newcommand*{\myExamDate}{30.02.2021}
 \newcommand*{\myFootText}{Dissertation \myAuthor}
 
@@ -24,7 +24,7 @@
 
 \begin{document}
 
-\input{../design-template/titlepage_dissertation_de}  % include german titlepage
+\input{../../design-template/titlepage_dissertation_de}  % include german titlepage
 
 \frontmatter  % start front matter section
 \pagenumbering{Roman}  % set page numbering to Roman
