--- a/sample/minimal/main.tex
+++ b/sample/minimal/main.tex
@@ -13,7 +13,7 @@
 \newcommand*{\myExamDate}{30.02.2021}
 \newcommand*{\myFootText}{Dissertation \myAuthor}
 
-\input{chapter/acronyms}  % import acronyms
+\input{acronyms}  % import acronyms
 
 \addbibresource{bibliography.bib}  % add bibliography
 
