txs auto checkin

--- a/design-template/designGiB.tex
+++ b/design-template/designGiB.tex
@@ -68,7 +68,7 @@
 	% Define header
 	% without *: only on regular pages
 	% with *: also on plain pages (like chapter beginning)
-	\ihead*{\headmark}  % Inside show caption of chapter (left) / section (right)
+	\ihead*[\headmark]{\headmark}  % Inside show caption of chapter (left) / section (right)
 	\ohead*{\pagemark}  % Outside show page number
 	
 	% Define footer	
