txs auto checkin

--- a/design-template/designGiB.tex
+++ b/design-template/designGiB.tex
@@ -83,3 +83,5 @@
 	\widowpenalty = 10000 \displaywidowpenalty = 10000
 	
 	\acsetup{list/display=used}  % show only used acronyms in listing
+	
+	\if@mainmatter \else {\pagenumbering{Roman}} \fi
