txs auto checkin

--- a/samples/minimal/main.tex
+++ b/samples/minimal/main.tex
@@ -29,5 +29,6 @@
 \mainmatter  % start main matter (arabic page numbering)
 \input{content}  % YOUR research content
 
+\printbibliography  % print bibliography
 
 \end{document}
