txs auto checkin

--- a/samples/minimal/main.tex
+++ b/samples/minimal/main.tex
@@ -13,6 +13,8 @@
 \newcommand*{\myExamDate}{30.02.2021}
 \newcommand*{\myFootText}{Dissertation \myAuthor}
 
+\addbibresource{bibliography.bib}  % add bibliography
+
 % ########################
 % Beginning of the 
 % main document
