txs auto checkin

--- a/samples/minimal/main.tex
+++ b/samples/minimal/main.tex
@@ -23,6 +23,7 @@
 \begin{document}
 
 \frontmatter  % start front matter section
+\pagenumbering{Roman}  % set page numbering to Roman
 
 \input{../../design-template/titlepage_dissertation_de}  % include german titlepage
 
