added clear header and footer

--- a/design-template/designGiB.tex
+++ b/design-template/designGiB.tex
@@ -75,6 +75,7 @@
 	\setkomafont{pagenumber}{\usekomafont{pageheadfoot}}
 	
 	% Define header
+	\clearpairofpagestyles  % clear existing header and footer
 	% without *: only on regular pages
 	% with *: also on plain pages (like chapter beginning)
 	\ihead*[\leftmark]{\headmark}  % Inside show caption of chapter (left) / section (right); on plain pages allways chapter (leftmark)
