--- a/samples/full/main.tex
+++ b/samples/full/main.tex
@@ -6,6 +6,7 @@
 
 \usepackage[ngerman]{babel}  % set language to german
 \usepackage{ziffer}  % conversion of punctuation in maths mode (switches . and ,)
+\sisetup{locale=DE}  % set language of siunitx package to german (change . to ,)
 \usepackage{lineno}  % create line numbering for review process
 \usepackage{blindtext}  % creates blindtexts
 
