changed enumitem default

--- a/design-template/designGiB.tex
+++ b/design-template/designGiB.tex
@@ -107,5 +107,5 @@
 	\setkeys{Gin}{keepaspectratio=true}  % allways keep aspact ratio of figures
 	
 	% Define enumerate end itemize environment defaults
-	\setlist{itemsep=0.3ex,topsep=0.3ex, parsep=0pt}  % set margin of enumerate and itemize environment
+	\setlist{nosep, itemsep=0.3ex}  % set margin of enumerate and itemize environment
 	\setlist[itemize]{label=--}  % set itemize label to dash
