added lscape package

--- a/design-template/designGiB.tex
+++ b/design-template/designGiB.tex
@@ -56,6 +56,7 @@
 	\usepackage{longtable}  % environment to create tables of a length of multiple pages
 	\usepackage{tabularx}  % create tabulars with a fixed width (one flexible col)
 	\usepackage{pdfpages}  % include multiple pages of pdf documents
+	\usepackage{lscape}  % introduced the landscape environment to turn tables landscape
 	
 	\usepackage{todonotes}  % creates to-do items and figures
 	
