--- a/samples/full/main.tex
+++ b/samples/full/main.tex
@@ -18,6 +18,10 @@
 
 \addbibresource{bibliography.bib}  % add bibliography
 
+%\DefineBibliographyStrings{english}{%
+%	references = {Works Cited},
+%}
+
 % ########################
 % Beginning of the 
 % main document
