changed size of minipages to prevent overfull boxes

--- a/design-template/titlepage_bachelor_master.tex
+++ b/design-template/titlepage_bachelor_master.tex
@@ -3,7 +3,7 @@
 	\begin{figure}[h]
 		\vspace{-3cm}
 		\hfill
-		\includegraphics[width=.6\textwidth]{rwth_logo}
+		\includegraphics[width=.6\linewidth]{rwth_logo}
 	\end{figure}
 	\sffamily{	
 	\vspace*{1\baselineskip}
@@ -12,39 +12,39 @@
 	\textbf{\small\textcolor{grey}{The present work was submitted to the Chair of Geotechnical Engineering}}
 	\vspace*{3\baselineskip}
 	
-	\begin{minipage}[t]{0.50\textwidth}
+	\begin{minipage}[t]{0.48\linewidth}
 		\begin{flushright}
 			\textbf{\myStudyProgramNameDe}
 		\end{flushright}
 	\end{minipage}
 	\hfil
-	\begin{minipage}[t]{0.50\textwidth}
+	\begin{minipage}[t]{0.48\linewidth}
 		\begin{flushleft}
 			\textbf{\textcolor{grey}{\myStudyProgramNameEn}}
 		\end{flushleft}
 	\end{minipage}
 
 	\vspace*{2\baselineskip}
-	\begin{minipage}[t]{0.50\textwidth}
+	\begin{minipage}[t]{0.48\linewidth}
 		\begin{flushright}
 			\Large\textbf{\myTitleDe}
 		\end{flushright}
 	\end{minipage}
 	\hfil
-	\begin{minipage}[t]{0.50\textwidth}
+	\begin{minipage}[t]{0.48\linewidth}
 		\begin{flushleft}
 			\Large\textbf{\textcolor{grey}{\myTitleEn}}
 		\end{flushleft}
 	\end{minipage}
 
 	\vspace*{2\baselineskip}
-	\begin{minipage}[t]{0.50\textwidth}
+	\begin{minipage}[t]{0.48\linewidth}
 		\begin{flushright}
 			vorgelegt von
 		\end{flushright}
 	\end{minipage}
 	\hfil
-	\begin{minipage}[t]{0.50\textwidth}
+	\begin{minipage}[t]{0.48\linewidth}
 		\begin{flushleft}
 			\textcolor{grey}{presented by}
 		\end{flushleft}
