added option dashed to biblatex package

--- a/design-template/designGiB.tex
+++ b/design-template/designGiB.tex
@@ -73,7 +73,8 @@
 							maxcitenames = 2, % truncate nameslist for citations
 							giveninits = true, % abbrevation for first name
 							date = year, % controls the basic format of printed date specifications
-							uniquelist = false % This feature allows ambiguous labelname list --> unique dateformat (e.g. 2020a, 2020b)
+							uniquelist = false, % This feature allows ambiguous labelname list --> unique dateformat (e.g. 2020a, 2020b)
+							dashed = false % This option controls whether recurrent the same author/editor list in the bibliography are replaced by a dash
 							]{biblatex}  % use biblatex for bibliography
 
 	\usepackage{acro}  % handle acronyms
